--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
         run: |
           ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0
            echo "connection made" 
-     # - name: Connect to EC2 and Copy Files
-      #  run: |
-       #   ssh -vvv -o StrictHostKeyChecking=no root@34.150.154.40 "cd /var/www/html/wordpress && git pull"
+      - name: Connect to EC2 and Copy Files
+        run: |
+          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "cd /var/www/html && rm -rf * && git init && git clone https://github.com/kishore1278/wordpress.git"
