--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
            echo "connection made" 
       - name: Connect to EC2 and Copy Files
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "cd /var/www/html && rm -rf * && git init && git clone https://github.com/kishore1278/wordpress.git"
+          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "mkdir -p /var/www/html && cd /var/www/html && rm -rf * && git init && git clone https://github.com/bpavithra18/wordpress.git"
