--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,6 @@ jobs:
           ssh-keyscan 34.85.214.0 >> /home/runner/.ssh/known_hosts
           cat '/home/runner/.ssh/known_hosts'
           echo "end of ssh key setup"
-      - name: Connect to EC2 and Run Commands
-        run: |
-          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0
-          echo "connection made" 
       - name: Connect to EC2 and Copy Files 
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "mkdir -p /var/www/html && cd /var/www/html && rm -rf * && git init && git clone https://github.com/bpavithra18/wordpress.git"
+          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "mkdir -p /var/www/html"
