--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           echo "end of ssh key setup"
       - name: Connect to EC2 and Copy Files 
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "mkdir -p /var/www/html && cd /var/www/html && rm -rf * && git init && git clone https://github.com/bpavithra18/wordpress.git && cp /var/www/wp-config.php /var/www/html/wordpress"
+          ssh -vvv -o StrictHostKeyChecking=no root@34.85.214.0 "mkdir -p /var/www/html && cd /var/www/html && rm -rf * && git init && git clone https://github.com/bpavithra18/wordpress.git && cp /var/www/wp-config.php /var/www/html/wordpress && git pull"
