--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           echo "end of ssh key setup"
       - name: Connect to EC2 and Copy Files 
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no root@35.245.208.32 "mkdir -p /var/www/html && cd /var/www/html && rm -rf * && git init && git clone https://github.com/bpavithra18/wordpress.git"
+          ssh -vvv -o StrictHostKeyChecking=no root@35.245.208.32 "mkdir -p /var/www/html && cd /var/www/html && rm -rf * && git init && git clone https://github.com/bpavithra18/wordpress.git && cd /var/www && cp wp-config.php /var/www/html/wordpress"
